# ChatApp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
client/: CMakeLists.txt
client/src/: ClientApp.cpp  ClientApp.h  MessageHandler.cpp  MessageHandler.h  main.cpp
config/: server.properties
protocol/: CMakeLists.txt
protocol/src/: Message.cpp  Message.h  message_types.h
server/: CMakeLists.txt
server/src/: ChatConnection.cpp  ChatConnection.h  ConnectionManager.cpp  ConnectionManager.h  ServerApp.cpp  ServerApp.h  UserManager.cpp  UserManager.h  main.cpp
